--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,38 @@
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
+
+/* Animação de fade-in ao rolar */
 .fade-in {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
 }
 .fade-in.show {
-    opacity: 1;
-    transform: translateY(0);
+  opacity: 1;
+  transform: translateY(0);
 }
+
 /* Botão voltar ao topo */
 #btnTop {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    background-color: #2563eb; /* blue-600 */
-    color: white;
-    padding: 0.5rem 0.75rem;
-    border-radius: 9999px;
-    cursor: pointer;
-    box-shadow: 0 2px 8px rgb(37 99 235 / 0.5);
-    display: none;
-    transition: background-color 0.3s ease;
-    z-index: 1000;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background-color: #2563eb; 
+  color: white;
+  padding: 0.5rem 0.75rem;
+  border-radius: 9999px;
+  cursor: pointer;
+  box-shadow: 0 2px 8px rgb(37 99 235 / 0.5);
+  transform: translateY(20px);
+  transition: all 0.3s ease;
+  z-index: 1000;
+  display: block; 
+}
+#btnTop.show {
+  opacity: 1;
+  transform: translateY(0);
 }
 #btnTop:hover {
-    background-color: #1e40af; /* blue-800 */
+  background-color: #1e40af;
 }
